parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELIF
    ERROR
    FLOAT
    INTEGER
    LSB
    MAIN
    MOD
    RSB
    VOID

Grammar

Rule 0     S' -> program
Rule 1     program -> empty
Rule 2     program -> basicblock
Rule 3     basicblock -> statements
Rule 4     statements -> statements statement
Rule 5     statements -> statement
Rule 6     statement -> const_declaration
Rule 7     statement -> var_declaration
Rule 8     statement -> assign_statement
Rule 9     statement -> print_statement
Rule 10    statement -> if_statement
Rule 11    statement -> if_else_statement
Rule 12    statement -> while_statement
Rule 13    statement -> return_statement
Rule 14    statement -> func_call
Rule 15    statement -> func_statement
Rule 16    if_statement -> IF expression LCURL basicblock RCURL
Rule 17    if_else_statement -> IF expression LCURL basicblock RCURL ELSE LCURL basicblock RCURL
Rule 18    while_statement -> WHILE expression LCURL basicblock RCURL
Rule 19    func_call -> ID LPAREN arguments RPAREN SEMI
Rule 20    arguments -> argument
Rule 21    argument -> expression
Rule 22    arguments -> arguments COMMA argument
Rule 23    arguments -> empty
Rule 24    parameter -> ID typename
Rule 25    parameters -> parameter
Rule 26    parameters -> parameters COMMA parameter
Rule 27    parameters -> empty
Rule 28    func_statement -> FUNC ID typename LPAREN parameters RPAREN LCURL basicblock RCURL
Rule 29    return_statement -> RETURN expression SEMI
Rule 30    const_declaration -> CONST ID ASSIGN expression SEMI
Rule 31    var_declaration -> VAR ID typename SEMI
Rule 32    var_declaration -> VAR ID typename ASSIGN expression SEMI
Rule 33    assign_statement -> location ASSIGN expression SEMI
Rule 34    print_statement -> PRINT expression SEMI
Rule 35    expression -> PLUS expression
Rule 36    expression -> MINUS expression
Rule 37    expression -> NOT expression
Rule 38    expression -> expression PLUS expression
Rule 39    expression -> expression MINUS expression
Rule 40    expression -> expression MUL expression
Rule 41    expression -> expression DIVIDE expression
Rule 42    expression -> expression GT expression
Rule 43    expression -> expression GTE expression
Rule 44    expression -> expression LT expression
Rule 45    expression -> expression LTE expression
Rule 46    expression -> expression EQ expression
Rule 47    expression -> expression NEQ expression
Rule 48    expression -> expression LAND expression
Rule 49    expression -> expression LOR expression
Rule 50    expression -> LPAREN expression RPAREN
Rule 51    expression -> location
Rule 52    expression -> literal
Rule 53    literal -> INTEGERNUMBER
Rule 54    literal -> FLOATNUMBER
Rule 55    literal -> STRING
Rule 56    literal -> BOOL
Rule 57    location -> ID
Rule 58    typename -> ID
Rule 59    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 30 32 33
BOOL                 : 56
COMMA                : 22 26
CONST                : 30
DIVIDE               : 41
ELIF                 : 
ELSE                 : 17
EQ                   : 46
ERROR                : 
FLOAT                : 
FLOATNUMBER          : 54
FUNC                 : 28
GT                   : 42
GTE                  : 43
ID                   : 19 24 28 30 31 32 57 58
IF                   : 16 17
INTEGER              : 
INTEGERNUMBER        : 53
LAND                 : 48
LCURL                : 16 17 17 18 28
LOR                  : 49
LPAREN               : 19 28 50
LSB                  : 
LT                   : 44
LTE                  : 45
MAIN                 : 
MINUS                : 36 39
MOD                  : 
MUL                  : 40
NEQ                  : 47
NOT                  : 37
PLUS                 : 35 38
PRINT                : 34
RCURL                : 16 17 17 18 28
RETURN               : 29
RPAREN               : 19 28 50
RSB                  : 
SEMI                 : 19 29 30 31 32 33 34
STRING               : 55
VAR                  : 31 32
VOID                 : 
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

argument             : 20 22
arguments            : 19 22
assign_statement     : 8
basicblock           : 2 16 17 17 18 28
const_declaration    : 6
empty                : 1 23 27
expression           : 16 17 18 21 29 30 32 33 34 35 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50
func_call            : 14
func_statement       : 15
if_else_statement    : 11
if_statement         : 10
literal              : 52
location             : 33 51
parameter            : 25 26
parameters           : 26 28
print_statement      : 9
program              : 0
return_statement     : 13
statement            : 4 5
statements           : 3 4
typename             : 24 28 31 32
var_declaration      : 7
while_statement      : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . empty
    (2) program -> . basicblock
    (59) empty -> .
    (3) basicblock -> . statements
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . const_declaration
    (7) statement -> . var_declaration
    (8) statement -> . assign_statement
    (9) statement -> . print_statement
    (10) statement -> . if_statement
    (11) statement -> . if_else_statement
    (12) statement -> . while_statement
    (13) statement -> . return_statement
    (14) statement -> . func_call
    (15) statement -> . func_statement
    (30) const_declaration -> . CONST ID ASSIGN expression SEMI
    (31) var_declaration -> . VAR ID typename SEMI
    (32) var_declaration -> . VAR ID typename ASSIGN expression SEMI
    (33) assign_statement -> . location ASSIGN expression SEMI
    (34) print_statement -> . PRINT expression SEMI
    (16) if_statement -> . IF expression LCURL basicblock RCURL
    (17) if_else_statement -> . IF expression LCURL basicblock RCURL ELSE LCURL basicblock RCURL
    (18) while_statement -> . WHILE expression LCURL basicblock RCURL
    (29) return_statement -> . RETURN expression SEMI
    (19) func_call -> . ID LPAREN arguments RPAREN SEMI
    (28) func_statement -> . FUNC ID typename LPAREN parameters RPAREN LCURL basicblock RCURL
    (57) location -> . ID

    $end            reduce using rule 59 (empty -> .)
    CONST           shift and go to state 16
    VAR             shift and go to state 18
    PRINT           shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    RETURN          shift and go to state 23
    ID              shift and go to state 17
    FUNC            shift and go to state 24

    program                        shift and go to state 1
    empty                          shift and go to state 2
    basicblock                     shift and go to state 3
    statements                     shift and go to state 4
    statement                      shift and go to state 5
    const_declaration              shift and go to state 6
    var_declaration                shift and go to state 7
    assign_statement               shift and go to state 8
    print_statement                shift and go to state 9
    if_statement                   shift and go to state 10
    if_else_statement              shift and go to state 11
    while_statement                shift and go to state 12
    return_statement               shift and go to state 13
    func_call                      shift and go to state 14
    func_statement                 shift and go to state 15
    location                       shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> empty .

    $end            reduce using rule 1 (program -> empty .)


state 3

    (2) program -> basicblock .

    $end            reduce using rule 2 (program -> basicblock .)


state 4

    (3) basicblock -> statements .
    (4) statements -> statements . statement
    (6) statement -> . const_declaration
    (7) statement -> . var_declaration
    (8) statement -> . assign_statement
    (9) statement -> . print_statement
    (10) statement -> . if_statement
    (11) statement -> . if_else_statement
    (12) statement -> . while_statement
    (13) statement -> . return_statement
    (14) statement -> . func_call
    (15) statement -> . func_statement
    (30) const_declaration -> . CONST ID ASSIGN expression SEMI
    (31) var_declaration -> . VAR ID typename SEMI
    (32) var_declaration -> . VAR ID typename ASSIGN expression SEMI
    (33) assign_statement -> . location ASSIGN expression SEMI
    (34) print_statement -> . PRINT expression SEMI
    (16) if_statement -> . IF expression LCURL basicblock RCURL
    (17) if_else_statement -> . IF expression LCURL basicblock RCURL ELSE LCURL basicblock RCURL
    (18) while_statement -> . WHILE expression LCURL basicblock RCURL
    (29) return_statement -> . RETURN expression SEMI
    (19) func_call -> . ID LPAREN arguments RPAREN SEMI
    (28) func_statement -> . FUNC ID typename LPAREN parameters RPAREN LCURL basicblock RCURL
    (57) location -> . ID

    $end            reduce using rule 3 (basicblock -> statements .)
    RCURL           reduce using rule 3 (basicblock -> statements .)
    CONST           shift and go to state 16
    VAR             shift and go to state 18
    PRINT           shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    RETURN          shift and go to state 23
    ID              shift and go to state 17
    FUNC            shift and go to state 24

    statement                      shift and go to state 25
    const_declaration              shift and go to state 6
    var_declaration                shift and go to state 7
    assign_statement               shift and go to state 8
    print_statement                shift and go to state 9
    if_statement                   shift and go to state 10
    if_else_statement              shift and go to state 11
    while_statement                shift and go to state 12
    return_statement               shift and go to state 13
    func_call                      shift and go to state 14
    func_statement                 shift and go to state 15
    location                       shift and go to state 19

state 5

    (5) statements -> statement .

    CONST           reduce using rule 5 (statements -> statement .)
    VAR             reduce using rule 5 (statements -> statement .)
    PRINT           reduce using rule 5 (statements -> statement .)
    IF              reduce using rule 5 (statements -> statement .)
    WHILE           reduce using rule 5 (statements -> statement .)
    RETURN          reduce using rule 5 (statements -> statement .)
    ID              reduce using rule 5 (statements -> statement .)
    FUNC            reduce using rule 5 (statements -> statement .)
    $end            reduce using rule 5 (statements -> statement .)
    RCURL           reduce using rule 5 (statements -> statement .)


state 6

    (6) statement -> const_declaration .

    CONST           reduce using rule 6 (statement -> const_declaration .)
    VAR             reduce using rule 6 (statement -> const_declaration .)
    PRINT           reduce using rule 6 (statement -> const_declaration .)
    IF              reduce using rule 6 (statement -> const_declaration .)
    WHILE           reduce using rule 6 (statement -> const_declaration .)
    RETURN          reduce using rule 6 (statement -> const_declaration .)
    ID              reduce using rule 6 (statement -> const_declaration .)
    FUNC            reduce using rule 6 (statement -> const_declaration .)
    $end            reduce using rule 6 (statement -> const_declaration .)
    RCURL           reduce using rule 6 (statement -> const_declaration .)


state 7

    (7) statement -> var_declaration .

    CONST           reduce using rule 7 (statement -> var_declaration .)
    VAR             reduce using rule 7 (statement -> var_declaration .)
    PRINT           reduce using rule 7 (statement -> var_declaration .)
    IF              reduce using rule 7 (statement -> var_declaration .)
    WHILE           reduce using rule 7 (statement -> var_declaration .)
    RETURN          reduce using rule 7 (statement -> var_declaration .)
    ID              reduce using rule 7 (statement -> var_declaration .)
    FUNC            reduce using rule 7 (statement -> var_declaration .)
    $end            reduce using rule 7 (statement -> var_declaration .)
    RCURL           reduce using rule 7 (statement -> var_declaration .)


state 8

    (8) statement -> assign_statement .

    CONST           reduce using rule 8 (statement -> assign_statement .)
    VAR             reduce using rule 8 (statement -> assign_statement .)
    PRINT           reduce using rule 8 (statement -> assign_statement .)
    IF              reduce using rule 8 (statement -> assign_statement .)
    WHILE           reduce using rule 8 (statement -> assign_statement .)
    RETURN          reduce using rule 8 (statement -> assign_statement .)
    ID              reduce using rule 8 (statement -> assign_statement .)
    FUNC            reduce using rule 8 (statement -> assign_statement .)
    $end            reduce using rule 8 (statement -> assign_statement .)
    RCURL           reduce using rule 8 (statement -> assign_statement .)


state 9

    (9) statement -> print_statement .

    CONST           reduce using rule 9 (statement -> print_statement .)
    VAR             reduce using rule 9 (statement -> print_statement .)
    PRINT           reduce using rule 9 (statement -> print_statement .)
    IF              reduce using rule 9 (statement -> print_statement .)
    WHILE           reduce using rule 9 (statement -> print_statement .)
    RETURN          reduce using rule 9 (statement -> print_statement .)
    ID              reduce using rule 9 (statement -> print_statement .)
    FUNC            reduce using rule 9 (statement -> print_statement .)
    $end            reduce using rule 9 (statement -> print_statement .)
    RCURL           reduce using rule 9 (statement -> print_statement .)


state 10

    (10) statement -> if_statement .

    CONST           reduce using rule 10 (statement -> if_statement .)
    VAR             reduce using rule 10 (statement -> if_statement .)
    PRINT           reduce using rule 10 (statement -> if_statement .)
    IF              reduce using rule 10 (statement -> if_statement .)
    WHILE           reduce using rule 10 (statement -> if_statement .)
    RETURN          reduce using rule 10 (statement -> if_statement .)
    ID              reduce using rule 10 (statement -> if_statement .)
    FUNC            reduce using rule 10 (statement -> if_statement .)
    $end            reduce using rule 10 (statement -> if_statement .)
    RCURL           reduce using rule 10 (statement -> if_statement .)


state 11

    (11) statement -> if_else_statement .

    CONST           reduce using rule 11 (statement -> if_else_statement .)
    VAR             reduce using rule 11 (statement -> if_else_statement .)
    PRINT           reduce using rule 11 (statement -> if_else_statement .)
    IF              reduce using rule 11 (statement -> if_else_statement .)
    WHILE           reduce using rule 11 (statement -> if_else_statement .)
    RETURN          reduce using rule 11 (statement -> if_else_statement .)
    ID              reduce using rule 11 (statement -> if_else_statement .)
    FUNC            reduce using rule 11 (statement -> if_else_statement .)
    $end            reduce using rule 11 (statement -> if_else_statement .)
    RCURL           reduce using rule 11 (statement -> if_else_statement .)


state 12

    (12) statement -> while_statement .

    CONST           reduce using rule 12 (statement -> while_statement .)
    VAR             reduce using rule 12 (statement -> while_statement .)
    PRINT           reduce using rule 12 (statement -> while_statement .)
    IF              reduce using rule 12 (statement -> while_statement .)
    WHILE           reduce using rule 12 (statement -> while_statement .)
    RETURN          reduce using rule 12 (statement -> while_statement .)
    ID              reduce using rule 12 (statement -> while_statement .)
    FUNC            reduce using rule 12 (statement -> while_statement .)
    $end            reduce using rule 12 (statement -> while_statement .)
    RCURL           reduce using rule 12 (statement -> while_statement .)


state 13

    (13) statement -> return_statement .

    CONST           reduce using rule 13 (statement -> return_statement .)
    VAR             reduce using rule 13 (statement -> return_statement .)
    PRINT           reduce using rule 13 (statement -> return_statement .)
    IF              reduce using rule 13 (statement -> return_statement .)
    WHILE           reduce using rule 13 (statement -> return_statement .)
    RETURN          reduce using rule 13 (statement -> return_statement .)
    ID              reduce using rule 13 (statement -> return_statement .)
    FUNC            reduce using rule 13 (statement -> return_statement .)
    $end            reduce using rule 13 (statement -> return_statement .)
    RCURL           reduce using rule 13 (statement -> return_statement .)


state 14

    (14) statement -> func_call .

    CONST           reduce using rule 14 (statement -> func_call .)
    VAR             reduce using rule 14 (statement -> func_call .)
    PRINT           reduce using rule 14 (statement -> func_call .)
    IF              reduce using rule 14 (statement -> func_call .)
    WHILE           reduce using rule 14 (statement -> func_call .)
    RETURN          reduce using rule 14 (statement -> func_call .)
    ID              reduce using rule 14 (statement -> func_call .)
    FUNC            reduce using rule 14 (statement -> func_call .)
    $end            reduce using rule 14 (statement -> func_call .)
    RCURL           reduce using rule 14 (statement -> func_call .)


state 15

    (15) statement -> func_statement .

    CONST           reduce using rule 15 (statement -> func_statement .)
    VAR             reduce using rule 15 (statement -> func_statement .)
    PRINT           reduce using rule 15 (statement -> func_statement .)
    IF              reduce using rule 15 (statement -> func_statement .)
    WHILE           reduce using rule 15 (statement -> func_statement .)
    RETURN          reduce using rule 15 (statement -> func_statement .)
    ID              reduce using rule 15 (statement -> func_statement .)
    FUNC            reduce using rule 15 (statement -> func_statement .)
    $end            reduce using rule 15 (statement -> func_statement .)
    RCURL           reduce using rule 15 (statement -> func_statement .)


state 16

    (30) const_declaration -> CONST . ID ASSIGN expression SEMI

    ID              shift and go to state 26


state 17

    (19) func_call -> ID . LPAREN arguments RPAREN SEMI
    (57) location -> ID .

    LPAREN          shift and go to state 27
    ASSIGN          reduce using rule 57 (location -> ID .)


state 18

    (31) var_declaration -> VAR . ID typename SEMI
    (32) var_declaration -> VAR . ID typename ASSIGN expression SEMI

    ID              shift and go to state 28


state 19

    (33) assign_statement -> location . ASSIGN expression SEMI

    ASSIGN          shift and go to state 29


state 20

    (34) print_statement -> PRINT . expression SEMI
    (35) expression -> . PLUS expression
    (36) expression -> . MINUS expression
    (37) expression -> . NOT expression
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MUL expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression GTE expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression LAND expression
    (49) expression -> . expression LOR expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . location
    (52) expression -> . literal
    (57) location -> . ID
    (53) literal -> . INTEGERNUMBER
    (54) literal -> . FLOATNUMBER
    (55) literal -> . STRING
    (56) literal -> . BOOL

    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    ID              shift and go to state 37
    INTEGERNUMBER   shift and go to state 38
    FLOATNUMBER     shift and go to state 39
    STRING          shift and go to state 40
    BOOL            shift and go to state 41

    expression                     shift and go to state 30
    location                       shift and go to state 35
    literal                        shift and go to state 36

state 21

    (16) if_statement -> IF . expression LCURL basicblock RCURL
    (17) if_else_statement -> IF . expression LCURL basicblock RCURL ELSE LCURL basicblock RCURL
    (35) expression -> . PLUS expression
    (36) expression -> . MINUS expression
    (37) expression -> . NOT expression
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MUL expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression GTE expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression LAND expression
    (49) expression -> . expression LOR expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . location
    (52) expression -> . literal
    (57) location -> . ID
    (53) literal -> . INTEGERNUMBER
    (54) literal -> . FLOATNUMBER
    (55) literal -> . STRING
    (56) literal -> . BOOL

    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    ID              shift and go to state 37
    INTEGERNUMBER   shift and go to state 38
    FLOATNUMBER     shift and go to state 39
    STRING          shift and go to state 40
    BOOL            shift and go to state 41

    expression                     shift and go to state 42
    location                       shift and go to state 35
    literal                        shift and go to state 36

state 22

    (18) while_statement -> WHILE . expression LCURL basicblock RCURL
    (35) expression -> . PLUS expression
    (36) expression -> . MINUS expression
    (37) expression -> . NOT expression
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MUL expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression GTE expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression LAND expression
    (49) expression -> . expression LOR expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . location
    (52) expression -> . literal
    (57) location -> . ID
    (53) literal -> . INTEGERNUMBER
    (54) literal -> . FLOATNUMBER
    (55) literal -> . STRING
    (56) literal -> . BOOL

    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    ID              shift and go to state 37
    INTEGERNUMBER   shift and go to state 38
    FLOATNUMBER     shift and go to state 39
    STRING          shift and go to state 40
    BOOL            shift and go to state 41

    expression                     shift and go to state 43
    location                       shift and go to state 35
    literal                        shift and go to state 36

state 23

    (29) return_statement -> RETURN . expression SEMI
    (35) expression -> . PLUS expression
    (36) expression -> . MINUS expression
    (37) expression -> . NOT expression
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MUL expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression GTE expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression LAND expression
    (49) expression -> . expression LOR expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . location
    (52) expression -> . literal
    (57) location -> . ID
    (53) literal -> . INTEGERNUMBER
    (54) literal -> . FLOATNUMBER
    (55) literal -> . STRING
    (56) literal -> . BOOL

    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    ID              shift and go to state 37
    INTEGERNUMBER   shift and go to state 38
    FLOATNUMBER     shift and go to state 39
    STRING          shift and go to state 40
    BOOL            shift and go to state 41

    expression                     shift and go to state 44
    location                       shift and go to state 35
    literal                        shift and go to state 36

state 24

    (28) func_statement -> FUNC . ID typename LPAREN parameters RPAREN LCURL basicblock RCURL

    ID              shift and go to state 45


state 25

    (4) statements -> statements statement .

    CONST           reduce using rule 4 (statements -> statements statement .)
    VAR             reduce using rule 4 (statements -> statements statement .)
    PRINT           reduce using rule 4 (statements -> statements statement .)
    IF              reduce using rule 4 (statements -> statements statement .)
    WHILE           reduce using rule 4 (statements -> statements statement .)
    RETURN          reduce using rule 4 (statements -> statements statement .)
    ID              reduce using rule 4 (statements -> statements statement .)
    FUNC            reduce using rule 4 (statements -> statements statement .)
    $end            reduce using rule 4 (statements -> statements statement .)
    RCURL           reduce using rule 4 (statements -> statements statement .)


state 26

    (30) const_declaration -> CONST ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 46


state 27

    (19) func_call -> ID LPAREN . arguments RPAREN SEMI
    (20) arguments -> . argument
    (22) arguments -> . arguments COMMA argument
    (23) arguments -> . empty
    (21) argument -> . expression
    (59) empty -> .
    (35) expression -> . PLUS expression
    (36) expression -> . MINUS expression
    (37) expression -> . NOT expression
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MUL expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression GTE expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression LAND expression
    (49) expression -> . expression LOR expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . location
    (52) expression -> . literal
    (57) location -> . ID
    (53) literal -> . INTEGERNUMBER
    (54) literal -> . FLOATNUMBER
    (55) literal -> . STRING
    (56) literal -> . BOOL

    RPAREN          reduce using rule 59 (empty -> .)
    COMMA           reduce using rule 59 (empty -> .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    ID              shift and go to state 37
    INTEGERNUMBER   shift and go to state 38
    FLOATNUMBER     shift and go to state 39
    STRING          shift and go to state 40
    BOOL            shift and go to state 41

    arguments                      shift and go to state 47
    argument                       shift and go to state 48
    empty                          shift and go to state 49
    expression                     shift and go to state 50
    location                       shift and go to state 35
    literal                        shift and go to state 36

state 28

    (31) var_declaration -> VAR ID . typename SEMI
    (32) var_declaration -> VAR ID . typename ASSIGN expression SEMI
    (58) typename -> . ID

    ID              shift and go to state 51

    typename                       shift and go to state 52

state 29

    (33) assign_statement -> location ASSIGN . expression SEMI
    (35) expression -> . PLUS expression
    (36) expression -> . MINUS expression
    (37) expression -> . NOT expression
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression MUL expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression GT expression
    (43) expression -> . expression GTE expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression LTE expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression LAND expression
    (49) expression -> . expression LOR expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . location
    (52) expression -> . literal
    (57) location -> . ID
    (53) literal -> . INTEGERNUMBER
    (54) literal -> . FLOATNUMBER
    (55) literal -> . STRING
    (56) literal -> . BOOL

    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    ID              shift and go to state 37
    INTEGERNUMBER   shift and go to state 38
    FLOATNUMBER     shift and go to state 39
    STRING          shift and go to state 40
    BOOL            shift and go to state 41

    location                       shift and go to state 35
    expression                     shift and go to state 53
    literal                        shift and go to state 36

state 30

    (34) print_statement -> PRINT expression . SEMI
    (38) expression -> expression . PLUS expression
    (39) expression -> expression . MINUS expression
    (40) expression -> expression . MUL expression
    (41) expression -> expression . DIVIDE expression
    (42) expression -> expression . GT expression
    (43) expression -> expression . GTE expression
    (44) expression -> expression . LT expression
    (45) expression -> expression . LTE expression
    (46) expression -> expression . EQ expression
    (47) expression -> expression . NEQ expression
    (48) expression -> expression . LAND expression
    (49) expression -> expression . LOR expression

    SEMI            shift and go to state 54
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56
    MUL             shift and go to state 57
    DIVIDE          shift and go to state 58
    GT              shift and go to state 59
    GTE             shift and go to state 60
    LT              shift and go to state 61
    LTE             shift and go to state 62
    EQ              shift and go to state 63
    NEQ             shift and go to state 64
    LAND            shift and go to state 65
    LOR             shift and go to state 66


state 31
